2007-02-08  Jonathan Pobst  <monkey@jpobst.com>

	* StatusStrip.cs: Stretch property needs to call base.Stretch,
	not this.Stretch to fix stack overflow. [Fixes bug #80760]

2007-02-07  Chris Toshok  <toshok@ximian.com>

	* ThemeWin32Classic.cs (DrawButtonBase): don't clear to the
	background color.  it overwrites the background image we've
	already painted.  Fixes #80599.

2007-02-07  Chris Toshok  <toshok@ximian.com>

	* DataGrid.cs: return immediately from Edit() when there are no
	columns.  Fixes #80662.

2007-02-07  Chris Toshok  <toshok@ximian.com>

	* MessageBox.cs: fix #80625.  don't always show the Help button in
	2.0.  use the displayHelpButton parameter to determine if we
	should show it. Also, make the internal show_help field private.

2007-02-07  Chris Toshok  <toshok@ximian.com>

	* Control.cs (SetVisibleCore): check in the proposed patch for
	80604, and set is_visible before calling CreateControl.

2007-02-07  Jonathan Pobst  <monkey@jpobst.com>

	* ListView.cs: UseCompatibleStateImageBehavior setter changed from NIEX to 
	MonoInternalNote.  This is added automagically by VS2005, so let's not crash
	on it.

2007-02-06  Everaldo Canuto  <everaldo@simios.org>

	* MenuAPI.cs: hotkey_active internal field added, it is required because
	we need to know when hotkeys must be draw, before this change a keystate
	Navigating was used but we can have menu in navigating state without
	hotkeys. Fixes #80694.
	
	* ThemeWin32Classic.cs: Only draw hot keys when hotkey_active is true.

2007-02-06  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Control.cs: Handle WM_CAPTURECHANGED in 1.1 code as well, and change
	  corresponding events and methods to be internal for 1.1 profile and
	  public for 2.0 profile (required by SizeGrip).
	* Form.cs: Use SizeGrip as a virtual SizeGrip (and don't add it to the
	  implicit control list). Don't set the size nor the location of the
	  SizeGrip anymore as it's not needed.