@@ -1,3 +1,13 @@
+2007-02-08  Rolf Bjarne Kvinge <RKvinge@novell.com> 
+
+	* DateTimePicker.cs: Fixed a NRE if CustomFormat was null. Handles the
+	  'g' specifier, not documented anywhere, but seems to always show up
+	  as a single space (might have something to do with the DateTime 'g'
+	  specifier, which is the era format, but since DateTimePicker can't
+	  go earlier than 1753 it wouldn't matter) . Fixed quote handling,
+	  won't crash if the format has an unmatched quote. Now shows
+	  single-character formats correctly. Fixes #80744.
+
 2007-02-08  Jonathan Pobst  <monkey@jpobst.com>
 
 	* StatusStrip.cs: Stretch property needs to call base.Stretch,
